add swipe functionality

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <span>WRITER | EDITOR | DESIGNER</span>
         </div>
     </div>
-    <nav>
+    <nav id="touchsurface">
         <a target="_blank" href="https://uglyduckstudio.com">
             <h3>DESIGN</h3>
             <img alt="Ugly Duck Studio Logo" src="assets/images/Final%20UDS%20Logo-copy.png"/>
@@ -69,5 +69,6 @@
     </nav>
 </main>
 
+<script src="assets/js/index.js"></script>
 </body>
 </html>
